buildscript {
    dependencies {
        constraints {
            classpath ('org.apache.commons:commons-lang3:3.18.0') {
                because("previous versions have vulnerabilities")
            }
        }
    }
}

plugins {
    id "java"
    id 'checkstyle'
    id 'io.freefair.lombok' version '8.0.1'
    id 'org.springframework.boot' version '3.5.14'
}

group = 'com.epam.aidial'
version = "0.0.0"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

bootJar {
    mainClass = 'com.epam.aidial.cfg.Application'
    manifest {
        attributes('Implementation-Title': 'ai-dial-admin-backend',
                'Implementation-Version': version)
    }
}

springBoot {
    buildInfo()
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }

    // https://stackoverflow.com/questions/39615376/apache-jclouds-java-lang-nosuchmethoderror-when-using-rackspace-in-a-spring-boot
    configureEach {
        exclude group: 'commons-logging', module: 'commons-logging'
        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
        resolutionStrategy {
            force 'com.google.code.gson:gson:2.8.9'
            force 'commons-beanutils:commons-beanutils:1.11.0'
        }
    }
}

checkstyle {
    toolVersion = "10.25.1"
    configDirectory = file("$rootProject.projectDir/checkstyle")
}

checkstyleMain.exclude '**/com/epam/aidial/core**'

repositories {
    mavenCentral()
}

dependencies {
    implementation platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)

    // https://issues.apache.org/jira/browse/JCLOUDS-1637
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:2.3.1'

    implementation 'org.apache.jclouds:jclouds-allblobstore:2.7.0'
    implementation 'org.apache.jclouds.api:filesystem:2.6.0'
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.23.0'
    implementation 'com.azure:azure-identity:1.15.3'
    implementation 'com.azure:azure-identity-extensions:1.2.7'
    implementation 'com.azure:azure-security-keyvault-secrets:4.8.3'
    implementation 'org.springframework.vault:spring-vault-core:3.1.2'
    implementation 'software.amazon.awssdk:secretsmanager:2.30.27'
    implementation 'com.google.cloud:google-cloud-secretmanager:2.59.0'
    implementation 'com.google.cloud.sql:postgres-socket-factory:1.28.0'
    implementation 'com.google.guava:guava:33.4.8-jre'
    implementation("org.jsoup:jsoup:1.21.1")
    implementation 'io.modelcontextprotocol.sdk:mcp:0.11.3'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.3.0'
    implementation 'org.springframework:spring-test'
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.2.Final'
    implementation 'org.glassfish:jakarta.el:4.0.2'
    implementation 'com.networknt:json-schema-validator:1.5.2' //TODO: will become transitive dependency of core.config lib
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    implementation 'org.apache.commons:commons-collections4:4.5.0-M3'
    implementation 'commons-validator:commons-validator:1.9.0'
    implementation 'commons-io:commons-io:2.18.0'
    implementation 'com.github.f4b6a3:uuid-creator:5.0.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.19.1'

    implementation 'org.mapstruct:mapstruct:1.6.0'
    implementation 'info.picocli:picocli-spring-boot-starter:4.7.6'

    implementation 'com.h2database:h2'
    implementation 'org.postgresql:postgresql:42.7.12'
    implementation 'com.microsoft.sqlserver:mssql-jdbc:12.10.2.jre11'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.data:spring-data-envers'
    implementation 'org.flywaydb:flyway-core:11.4.1'
    implementation 'org.flywaydb:flyway-database-postgresql:11.4.1'
    implementation 'org.flywaydb:flyway-sqlserver:11.4.1'

    implementation 'io.fabric8:kubernetes-client:7.5.2'

    implementation 'com.influxdb:influxdb-client-java:7.2.0'
    implementation 'com.influxdb:influxdb3-java:1.8.0'

    implementation 'org.apache.commons:commons-csv:1.13.0'

    implementation platform('io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom:2.12.0')
    implementation 'io.opentelemetry.instrumentation:opentelemetry-spring-boot-starter:2.12.0'

    implementation 'io.micrometer:micrometer-registry-prometheus'
//    implementation 'io.micrometer:micrometer-registry-otlp'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

    implementation('org.springframework.boot:spring-boot-starter-log4j2') {
        exclude group: 'org.apache.logging.log4j'
    }
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.25.4'
    implementation 'org.apache.logging.log4j:log4j-core:2.25.4'
    implementation 'org.apache.logging.log4j:log4j-jul:2.25.4'
    implementation 'io.opentelemetry:opentelemetry-sdk'
    implementation 'io.opentelemetry:opentelemetry-exporter-otlp'
    implementation 'io.opentelemetry.instrumentation:opentelemetry-log4j-appender-2.17:1.33.6-alpha'

    implementation project(':query-language')

    implementation("com.nimbusds:oauth2-oidc-sdk:11.33")

    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    annotationProcessor "org.mapstruct:mapstruct-processor:1.6.0"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:5.3.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
    testImplementation 'org.assertj:assertj-core:3.27.7'
    testImplementation 'org.apache.commons:commons-lang3:3.18.0'
    testImplementation 'io.jsonwebtoken:jjwt:0.9.1'
    testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:4.1.0'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:mssqlserver'
    testImplementation 'org.testcontainers:influxdb'

    constraints {
        implementation('org.springframework.data:spring-data-commons:3.5.12') {
            because("previous versions have vulnerabilities")
        }
        implementation('org.springframework:spring-expression:6.2.19') {
            because("previous versions have vulnerabilities")
        }
        implementation('org.springframework:spring-webmvc:6.2.19') {
            because("previous versions have vulnerabilities")
        }
        implementation ('com.fasterxml.jackson.core:jackson-databind:2.22.0') {
            because("previous versions have vulnerabilities")
        }
        implementation ('com.fasterxml.jackson.core:jackson-core:2.22.1') {
            because("previous versions have vulnerabilities")
        }
        implementation ('org.apache.tomcat.embed:tomcat-embed-core:11.0.22') {
            because("previous versions have vulnerabilities")
        }
        implementation ('commons-fileupload:commons-fileupload:1.6.0') {
            because("previous versions have vulnerabilities")
        }
        implementation('io.netty:netty-codec-http2:4.2.16.Final') {
            because("previous versions have vulnerabilities")
        }
        implementation('io.netty:netty-codec-compression:4.2.16.Final') {
            because("previous versions have vulnerabilities")
        }
        implementation ('io.netty:netty-handler:4.2.15.Final') {
            because("previous versions have vulnerabilities")
        }
        implementation("io.grpc:grpc-netty-shaded:1.75.0") {
            because("previous versions have vulnerabilities")
        }
        implementation("io.netty:netty-codec-dns:4.1.135.Final") {
            because("previous versions have vulnerabilities")
        }
        implementation("io.netty:netty-resolver-dns:4.1.135.Final") {
            because("previous versions have vulnerabilities")
        }
        implementation("io.netty:netty-transport-native-epoll:4.2.15.Final") {
            because("previous versions have vulnerabilities")
        }
        implementation("org.bouncycastle:bcprov-jdk18on:1.84") {
            because("previous versions have vulnerabilities")
        }
        testImplementation('org.apache.commons:commons-compress:1.27.1') {
            because("previous versions have vulnerabilities")
        }
        checkstyle ('org.apache.commons:commons-lang3:3.18.0') {
            because("previous versions have vulnerabilities")
        }
        checkstyle ('org.codehaus.plexus:plexus-utils:4.0.3') {
            because("previous versions have vulnerabilities")
        }
    }
}

test {
    useJUnitPlatform {
        excludeTags 'performance'
    }
    jvmArgs += '--add-opens=java.base/java.nio=ALL-UNNAMED'
}

tasks.register('perfTest', Test) {
    description = 'Runs tests tagged "performance". Not part of the default test suite.'
    group = 'verification'
    useJUnitPlatform {
        includeTags 'performance'
    }
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    jvmArgs += '--add-opens=java.base/java.nio=ALL-UNNAMED'
    shouldRunAfter test
    outputs.upToDateWhen { false }
    testLogging {
        showStandardStreams = true
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "-Werror"
}